refactor: replace Collections.* with modern Map.of/List.of.